--- a/src/Components/HousePosting/HousePosting.css
+++ b/src/Components/HousePosting/HousePosting.css
@@ -75,13 +75,14 @@
 
 .div_checkboxes > div:nth-child(2){
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
     gap: 15px;
     margin-top: 2vh;
 }
 
 .div_checkboxes > div > label{
     display: flex;
+    align-items: center;
     gap: 5px;
 }
 
@@ -211,4 +212,58 @@
     height: 100%;
     border: 1px solid black;
     overflow-x: auto;
+}
+
+.owner_contact_posting{
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    border: 1px solid black;
+    justify-content: center;
+    padding: 50px;
+}
+
+.owner_contact_posting h2{
+    width: 100%;
+    text-align: center;
+}
+
+.owner_contact_posting > div:first-child {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.owner_contact_posting > div:last-child {
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact_input_posting{
+    margin: 0 0 2vh;
+    padding-left: 15px;
+}
+
+.contact_input_posting input{
+    padding-left: 15px;
+    width: 30%;
+    height: 40px;
+    margin-right: 15px;
+}
+
+
+.add_contact_section{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(var(--text-color));
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
 }
