--- a/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
+++ b/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
@@ -33,6 +33,26 @@
 }
 
 
+.more_filter_content::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+/* Track */
+.more_filter_content::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.more_filter_content::-webkit-scrollbar-thumb {
+    background: rgba(85, 85, 85,0.5);
+}
+
+/* Handle on hover */
+.more_filter_content::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .more_filter_from_to{
     display: flex;
     gap: 50px;
@@ -41,6 +61,17 @@
 .more_filter_from_to input{
     width: 70px;
     margin: 0 5px 0 0;
+    height: 35px;
+    border: 1px solid rgb(189,189,189);
+    outline: none;
+    padding-left: 5px;
+}
+
+.mf_all  input[type='text']{
+    height: 35px;
+    border: 1px solid rgb(189,189,189);
+    outline: none;
+    padding-left: 5px;
 }
 
 
@@ -64,7 +95,8 @@
 
 .multiple_house_types_checks{
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(4,1fr);
+    font-size: 15px;
     gap: 20px;
 }
 
@@ -77,6 +109,7 @@
 .multiple_house_types_checks input{
     width: 20px;
     height: 20px;
+    border: 1px solid rgb(189,189,189);
 }
 
 .mf_all{
@@ -132,7 +165,7 @@
     }
 }
 
-@media only screen and (max-width: 670px) {
+@media only screen and (max-width: 700px) {
     .mf_all{
         flex-wrap: wrap;
     }
@@ -174,13 +207,13 @@
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 470px) {
     .mf_button_part{
         gap: 5px;
     }
 
     .multiple_house_types_checks{
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(3,1fr);
         gap: 20px;
     }
 
@@ -205,7 +238,7 @@
     }
 
     .multiple_house_types_checks{
-        grid-template-columns: repeat(3,1fr);
+        grid-template-columns: repeat(2,1fr);
     }
 
     .mf_button_part button{
