--- a/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
+++ b/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
@@ -26,8 +26,11 @@
 .more_filter_content {
     width: 100%;
     height: 478px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     box-sizing: border-box;
-    padding: 33px 70px 33px 150px;
+    padding: 33px 0;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -54,13 +57,16 @@
 }
 
 .more_filter_from_to{
-    display: flex;
     gap: 50px;
 }
 
+.more_filter_from_to > div{
+    display: flex;
+    justify-content: space-between;
+}
+
 .more_filter_from_to input{
-    width: 70px;
-    margin: 0 5px 0 0;
+    width: 48%;
     height: 35px;
     border: 1px solid rgb(189,189,189);
     outline: none;
@@ -94,8 +100,7 @@
 
 
 .multiple_house_types_checks{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
+    display: flex;
     font-size: 15px;
     gap: 20px;
 }
@@ -115,18 +120,49 @@
 .mf_all{
     width: 100%;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top:2vh;
 }
 
+.mf_all:first-child{
+    margin-top: 0;
+}
+
+.height_button{
+    width: 120px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 1px solid rgb(189,189,189);
+}
+
+.active_height_button{
+    background-color: rgba(189,189,189,0.7);
+}
+
+.active_height_button:hover{
+    background-color: rgb(189,189,189)!important;
+}
+
+.height_button:hover{
+    background-color: rgba(189,189,189,0.3);
+}
+
 .mf_all > div:first-child{
-    width: 40%;
+    width: 80%;
     font-size: 20px;
+    padding-bottom: 10px;
+    margin: 2vh 0;
+    border-bottom: 1px solid rgba(121, 121, 121,0.3);
 }
 
 .mf_all > div:last-child{
-    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 80%;
 }
 
 .more_filter_from_to > div:first-child{
@@ -213,6 +249,7 @@
     }
 
     .multiple_house_types_checks{
+        display: grid;
         grid-template-columns: repeat(3,1fr);
         gap: 20px;
     }
@@ -238,6 +275,7 @@
     }
 
     .multiple_house_types_checks{
+        display: grid;
         grid-template-columns: repeat(2,1fr);
     }
 
