--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,4 +6,35 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.footer_social_network{
+    position: absolute;
+    display: flex;
+    gap: 10px;
+    right: 50px;
+}
+
+.footer_social_network img {
+    width: 25px;
+}
+
+@media only screen and (max-width: 650px) {
+    footer {
+        height: 10vh;
+    }
+
+    .footer_copyright{
+        position: absolute;
+        top: 2vh;
+    }
+
+
+    .footer_social_network{
+        bottom: 0;
+        left: 50%;
+        justify-content: center;
+        transform: translate(-50%,-50%);
+    }
 }
