--- a/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
+++ b/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
@@ -110,7 +110,7 @@
     width: 17px;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:830px) {
 
     .multiple_select_modal{
         width: 200px!important;
@@ -132,31 +132,33 @@
 
     .state_squares{
         width: 200px;
+        height: 50px;
         padding-left: 10px!important;
     }
 
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:790px) {
     .multiple_select > span{
         font-size: 15px;
     }
 
     .multiple_select_modal{
-        width: 100%!important;
+        width: 50%!important;
+        top: 85%;
     }
 
     .single_check > label > span{
         font-size: 13px;
     }
 
+    .state_squares{
+        width: 250px;
+    }
+
     .multiple_select{
         height: 40px;
         position: unset;
-    }
-
-    .multiple_select_modal{
-        top: 85%;
     }
 
     .single_check{
@@ -177,3 +179,16 @@
     }
 }
 
+@media screen and (max-width:600px) {
+    .multiple_select_modal{
+        width: 70%!important;
+        margin-left: 50%;
+        transform: translate(-50%);
+    }
+    }
+
+@media screen and (max-width:480px) {
+    .multiple_select_modal{
+        width: 100%!important;
+    }
+}
