--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -79,12 +79,15 @@
 
 .single_dash_line{
     display: flex;
-    /*min-width: 370%;*/
-    min-width: 250%;
+    min-width: 300%;
     height: 70px;
     border-bottom: 1px solid rgba(189,189,189,0.23);
     cursor: pointer;
     overflow: auto;
+}
+
+.timeLimited{
+    background-color: rgba(255, 0, 0, 0.15);
 }
 
 .single_dash_line > div{
