--- a/src/Components/HomePage/Components/Swiper/Swiper.css
+++ b/src/Components/HomePage/Components/Swiper/Swiper.css
@@ -13,9 +13,12 @@
 .swiper_section h2{
     margin-bottom: 7vh;
     text-align: center;
-    color: rgb(63,168,171);
-    border-bottom: 2px solid rgb(63,168,171);
-    height: 8.5vh;
+}
+
+.swipe_line{
+    width: 100%;
+    height: 2px;
+    background-color: rgb(63,168,171);
 }
 
 .slide-container{
@@ -52,4 +55,10 @@
 
 .swiper-pagination-clickable .swiper-pagination-bullet{
     background-color: rgb(63,168,171)!important;
+}
+
+@media only screen and (max-width: 500px) {
+    .swiper_section h2{
+        margin-bottom: 3vh;
+    }
 }
