--- a/src/Components/HomePage/Components/Swiper/Swiper.css
+++ b/src/Components/HomePage/Components/Swiper/Swiper.css
@@ -6,22 +6,22 @@
 }
 
 
-.swiper_section:last-child{
+.swiper_section:last-child {
     padding-bottom: 15vh;
 }
 
-.swiper_section h2{
-    margin-bottom: 7vh;
+.swiper_section h2 {
     text-align: center;
 }
 
-.swipe_line{
+.swipe_line {
     width: 100%;
     height: 2px;
-    background-color: rgb(63,168,171);
+    margin: 3vh 0;
+    background-color: rgb(63, 168, 171);
 }
 
-.slide-container{
+.slide-container {
     position: relative;
 }
 
@@ -49,16 +49,16 @@
     object-fit: cover;
 }
 
-.swiper-button-next, .swiper-button-prev{
-    color: rgb(63,168,171)!important;
+.swiper-button-next, .swiper-button-prev {
+    color: rgb(63, 168, 171) !important;
 }
 
-.swiper-pagination-clickable .swiper-pagination-bullet{
-    background-color: rgb(63,168,171)!important;
+.swiper-pagination-clickable .swiper-pagination-bullet {
+    background-color: rgb(63, 168, 171) !important;
 }
 
 @media only screen and (max-width: 500px) {
-    .swiper_section h2{
+    .swiper_section h2 {
         margin-bottom: 3vh;
     }
 }
