--- a/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
+++ b/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
@@ -139,6 +139,11 @@
 }
 
 @media screen and (max-width:790px) {
+
+    .multiple_select{
+        border-bottom: 1px solid rgba(233,233,233,0.5);
+    }
+
     .multiple_select > span{
         font-size: 15px;
     }
